# tidal-drum-patterns

./: CHANGES  README.md  tidal-drum-patterns.cabal
Sound/Tidal/Drum/: Afro1a.hs  Afro1b.hs  Afro1c.hs  Afro2a.hs  Afro2b.hs  Afro2c.hs  Afro3a.hs  Afro3b.hs  Afro3c.hs  Afro4a.hs  Afro4b.hs  Afro4c.hs  Afro5a.hs  Afro5b.hs  Afro5c.hs  Afro6a.hs  Afro6b.hs  Afro6c.hs  Ageispolis.hs  All.hs  Amen.hs  AmenBrother.hs  AshleysRoachClip.hs  Autobahn1a.hs  Autobahn1b.hs  Ballad1a.hs  Ballad1b.hs  Ballad1c.hs  Ballad2a.hs  Ballad2b.hs  Ballad2c.hs  Ballad3a.hs  Ballad3b.hs  Ballad3c.hs  Ballad4a.hs  Ballad4b.hs  Ballad4c.hs  Ballad5a.hs  Ballad5b.hs  Ballad5c.hs  (+463 more)
