name:                tidal-drum-patterns
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/lvm/tidal-drum-patterns
license:             GPL-3
license-file:        LICENSE
author:              Mauro Lizaur
maintainer:          Mauro Lizaur <mauro@sdf.org>
-- copyright:
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Tidal.Drum.All
                       Sound.Tidal.Drum.Amen
                       Sound.Tidal.Drum.BooksOfMoses
                       Sound.Tidal.Drum.CissyStrut
                       Sound.Tidal.Drum.ComeDancing
                       Sound.Tidal.Drum.ExpensiveShit
                       Sound.Tidal.Drum.ExpressYourself
                       Sound.Tidal.Drum.FunkyDrummer
                       Sound.Tidal.Drum.GetUp
                       Sound.Tidal.Drum.HaitianDivorce
  -- other-modules:
  -- other-extensions:
  Build-depends: base < 5, tidal
  -- hs-source-dirs:
  default-language:    Haskell2010
