name:                tidal-drum-patterns
version:             0.2
-- synopsis:
-- description:
homepage:            https://github.com/lvm/tidal-drum-patterns
license:             GPL-3
license-file:        LICENSE
author:              Mauro Lizaur
maintainer:          Mauro Lizaur <mauro@sdf.org>
-- copyright:
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Tidal.Drum.All
                       Sound.Tidal.Drum.Amen
                       Sound.Tidal.Drum.BooksOfMoses
                       Sound.Tidal.Drum.ChugChugChugALug
                       Sound.Tidal.Drum.CissyStrut
                       Sound.Tidal.Drum.ColdSweat
                       Sound.Tidal.Drum.ComeDancing
                       Sound.Tidal.Drum.CowdBell
                       Sound.Tidal.Drum.ExpensiveShit
                       Sound.Tidal.Drum.ExpressYourself
                       Sound.Tidal.Drum.FunkyDrummer
                       Sound.Tidal.Drum.FunkyPresident
                       Sound.Tidal.Drum.GetUp
                       Sound.Tidal.Drum.GrooveMe
                       Sound.Tidal.Drum.HaitianDivorce
                       Sound.Tidal.Drum.HookAndSling
                       Sound.Tidal.Drum.HotSweat
                       Sound.Tidal.Drum.IGotTheFeelin
                       Sound.Tidal.Drum.IGotYou
                       Sound.Tidal.Drum.ItsANewDay
                       Sound.Tidal.Drum.KissingMyLove
                       Sound.Tidal.Drum.KnocksMeOffMyFeet
                       Sound.Tidal.Drum.Lady
                       Sound.Tidal.Drum.LadyMarmalade
                       Sound.Tidal.Drum.LetAWomanBeAWomanLetAManBeAMan
                       Sound.Tidal.Drum.LookKaPyPy
                       Sound.Tidal.Drum.MotherPopcorn
                       Sound.Tidal.Drum.OOHChild
                       Sound.Tidal.Drum.PalmGrease
                       Sound.Tidal.Drum.Poptech2010
                       Sound.Tidal.Drum.RespectYourself
                       Sound.Tidal.Drum.RockSteady
                       Sound.Tidal.Drum.StrBtsDcGogo100
                       Sound.Tidal.Drum.Superstition
                       Sound.Tidal.Drum.SyntheticSubstitution
                       Sound.Tidal.Drum.TheFez
                       Sound.Tidal.Drum.TheSameBlood
                       Sound.Tidal.Drum.TheThrillIsGone
                       Sound.Tidal.Drum.UseMe
                       Sound.Tidal.Drum.HipHop
                       Sound.Tidal.Drum.Breaks
                       Sound.Tidal.Drum.Jungle

  -- other-modules:
  -- other-extensions:
  Build-depends: base < 5, tidal
  -- hs-source-dirs:
  default-language:    Haskell2010
